--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -90,7 +90,7 @@ h1 {
 
 .navbar-fixed-top {
 	margin-bottom:0;
-	border-top: 4px solid #d54872;
+	border-top: 4px solid #006dcc;
 	position: fixed;
 }
 
