--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3,9 +3,7 @@
 
 body {
 	/* Change the background image here  */
-	background: url('../img/background.jpg') #000 top center  no-repeat;
-    background-size: 100% 100%;
-	font-family:'Open Sans',sans-serif;
+    font-family: 'Doppio One', sans-serif;
     min-width: 1024px;
 }
 
@@ -49,390 +47,66 @@ h1 {
 
 .main-container {
 	position:relative;
+    background: url('../img/hands.jpg') #000 top center  no-repeat;
+    background-size: 100%;
+
 }
 
 
 .main-container .container {
 	padding:0px;
-	height: 400px;
+	min-height: 768px;
+}
+
+#header .span2
+{
+    margin-top: 10px;
+    font-size: 20px;
+    font-weight: bold;
+    text-align: center;
+}
+
+#header a{
+    background:url('../../logo.png') no-repeat center center;
+    height:80px;
 }
 
 /* Section Styles  */
-
-#intro {
-	margin-top:160px;
-	text-align:center;
-	min-height:450px;
-	padding:0 0 50px;
-}
-
-#intro h1 {
-	color:#fff;
-}
-
-#intro p {
-	padding:15px 0;
-	color:#fff;
-}
-
-#about {
-    height: 600px;
-	/*background:#fff;*/
-	/*background-color:rgba(255,255,255,0.7);*/
-	/*background-color:rgba(0,0,0,0.8);*/
-}
-
-#about img
+.footer
 {
-    width: 200px;
+    width: 100%;
+    height: 160px;
+    padding: 20px;;
+    background: #464646;
+    color: #ffffff;
 }
 
-#thespace
+.footer .container-fluid
 {
-	/*: url('../img/thespace.jpg') #000 top center no-repeat;(/
-	/*background-size: 130%;*/
-	height: 700px;
-    display: none;
-}
-
-#thespace h1, #thespace h2
-{
-	text-align: center;
-}
-
-#thespace .container
-{
-	width: 700px;
-	border-radius: 10px;
-    margin-top: 20px;
-	padding: 15px;
-	/*background-color:rgba(0,0,0,0.6);*/
-	height: 160px;
-}
-
-#companies
-{
-    /*background:#FFFFFF;*/
-    /*background:#0E67B9;*/
-    /*background:#8B3C1A;*/
-}
-
-#companies h1
-{
-    color: #FFFFFF;
-	margin-top: 30px;
-	margin-bottom: 60px;
-}
-
-#companies ul
-{
-	margin-top: 0px;
-}
-
-#team {
-	/*background:#0E67B9;
-	background:rgba(14,103,185,0.8);*/
-}
-
-#team .span4 .thumbnail > img
-{
-    width: 200px;
+    width: 1180px;
     margin: auto;
-}
-
-
-#contact {
-	/*background:#202020;*/
-}
-
-#contact .container{
 
 }
 
-#contact .whitebg
+.footer
 {
-    color: #000000;
-    padding: 30px;
-    background:rgba(255,255,255,0.7);
-    margin-bottom: 50px;
+    font-family: 'verdana';
 }
-
-#contact .span4
+.footer .contact-title
 {
-	width: 360px;
+    margin-top: 20px;
+    font-size: 18px;
 }
 
-
-#contact iframe
+.footer .contact-info
 {
-	max-height: 300px;
-}
-#contact h1
-{
-	margin-top: 40px;
-}
-/* Navbar Styles  */
-
-.navbar-fixed-top {
-	margin-bottom:0;
-	border-top: 4px solid #006dcc;
-	position: fixed;
+    margin-top: 20px;
+    font-weight: normal;
+    font-size: 17px;
+    color: #009AD0;
 }
 
-.navbar-fixed-top.scroll {
-	opacity:.96;
+.footer a {
+    color: #009AD0;
+    text-decoration: none;
 }
-
-.navbar-inner {
-	border-bottom:0 none;
-	-webkit-box-shadow:0 1px 2px rgba(0,0,0,0.5);
-	-moz-box-shadow:0 1px 2px rgba(0,0,0,0.5);
-	box-shadow:0 1px 2px rgba(0,0,0,0.5);
-	filter:none;
-	padding:8px 0 30px;
-	background:#0d0d0d;
-	background:rgba(13,13,13,0.9);
-}
-
-.navbar .brand {
-	font-size:19px;
-	font-weight: 300;
-	text-shadow:none;
-	padding:20px 0 0;
-	font-family: raleway;
-	color: #fff!important;
-}
-
-.navbar .nav.pull-right {
-	top:10px;
-}
-
-.navbar .nav > li > a {
-	color:#F8F8F8;
-	font-size:15px;
-	font-weight:300;
-	text-shadow:none;
-	-webkit-transition:all .1s linear;
-	-moz-transition:all .1s linear;
-	-ms-transition:all .1s linear;
-	-o-transition:all .1s linear;
-	transition:all .1s linear;
-}
-
-.navbar .nav li a:hover,.navbar .nav li a:focus{
-	color:#F8F8F8;	
-}
-
-.navbar .nav > li > a:hover {
-	color:#ccc;
-}
-
-
-.navbar .nav > li.active > a,.navbar .nav > li.active:hover > a,.navbar .nav > .active > a,.navbar .nav > .active > a:hover,.navbar .nav > .active > a:focus {
-	padding-bottom:4px;
-	-webkit-box-shadow:none;
-	box-shadow:none;
-	-moz-box-shadow:none;
-	background:none;
-	color:#fff;
-}
-
-.btn-dropnav {
-	float:right;
-	margin-left:5px;
-	margin-right:5px;
-	padding:7px 10px;
-	display:none;
-}
-
-.btn-dropnav .icon-bar {
-	background-color:#F5F5F5;
-	-webkit-box-shadow:0 1px 0 rgba(0,0,0,0.25);
-	-moz-box-shadow:0 1px 0 rgba(0,0,0,0.25);
-	box-shadow:0 1px 0 rgba(0,0,0,0.25);
-	display:block;
-	height:2px;
-	width:18px;
-}
-
-.btn-dropnav .icon-bar + .icon-bar {
-	margin-top:3px;
-}
-
-.navbar .nav li.dropdown.open > .dropdown-toggle,.navbar .nav li.dropdown.active > .dropdown-toggle,.navbar .nav li.dropdown.open.active > .dropdown-toggle {
-	background:none;
-	color:#fff;
-}
-
-.dropdown-menu li > a:hover,.dropdown-menu li > a:focus,.dropdown-submenu:hover > a {
-	background-color:#8d2040!important;
-	text-decoration:none;
-	color:#fff;
-	filter:progid:DXImageTransform.Microsoft.gradient(startColorstr="#d54872",endColorstr="#8d2040");
-	background-image:-khtml-gradient(linear,left top,left bottom,from(#d54872),to(#8d2040));
-	background-image:-moz-linear-gradient(top,#d54872,#8d2040);
-	background-image:-ms-linear-gradient(top,#d54872,#8d2040);
-	background-image:-webkit-gradient(linear,left top,left bottom,color-stop(0%,#d54872),color-stop(100%,#8d2040));
-	background-image:-webkit-linear-gradient(top,#d54872,#8d2040);
-	background-image:-o-linear-gradient(top,#d54872,#8d2040);
-	background-image:linear-gradient(#d54872,#8d2040);
-	background-repeat:repeat-x;
-	filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#475B77',endColorstr='#475B77',GradientType=0);
-}
-
-.navbar .btn-navbar .icon-bar {
-	display:block;
-	width:18px;
-	height:2px;
-	background-color:#5FAF08;
-	-webkit-border-radius:1px;
-	-moz-border-radius:1px;
-	border-radius:1px;
-	-webkit-box-shadow:none;
-	-moz-box-shadow:none;
-	box-shadow:none;
-}
-
-.navbar .btn-navbar {
-	margin-right: 30px;
-}
-
-
-.thumbnail {
-	text-align:center;
-	border:0;
-	box-shadow:none;
-	-moz-box-shadow:none;
-	-o-box-shadow:none;
-	-webkit-box-shadow:none;
-}
-
-@media (max-width: 979px) {
-
-	.nav-collapse .nav > li > a:hover,.nav-collapse .dropdown-menu a:hover {
-		background:none!important;
-	}
-	
-	.nav-collapse .nav > li > a,.nav-collapse .dropdown-menu a {
-		color:#ccc;
-	}
-	
-	.navbar .brand {
-		padding:8px 0 0 40px;
-	}
-	
-	body {
-		padding-right:0;
-		padding-left:0;
-		background-size:250%;
-	}
-	
-	#intro {
-	margin-top:45px;
-	}
-}
-
-@media (max-width: 767px) {
-	body {
-		padding-right:0;
-		padding-left:0;
-		background-size:330%;
-	}
-	
-}
-
-@media (max-width: 480px) {
-	body {
-		background-size:420%;
-	}
-
-}
-
-.btn-purple {
-	background-color:hsl(342,63%,34%)!important;
-	background-repeat:repeat-x;
-	filter:progid:DXImageTransform.Microsoft.gradient(startColorstr="#d54872",endColorstr="#8d2040");
-	background-image:-khtml-gradient(linear,left top,left bottom,from(#d54872),to(#8d2040));
-	background-image:-moz-linear-gradient(top,#d54872,#8d2040);
-	background-image:-ms-linear-gradient(top,#d54872,#8d2040);
-	background-image:-webkit-gradient(linear,left top,left bottom,color-stop(0%,#d54872),color-stop(100%,#8d2040));
-	background-image:-webkit-linear-gradient(top,#d54872,#8d2040);
-	background-image:-o-linear-gradient(top,#d54872,#8d2040);
-	background-image:linear-gradient(#d54872,#8d2040);
-	border-color:#8d2040 #8d2040 hsl(342,63%,28.5%);
-	color:#fff!important;
-	text-shadow:0 -1px 0 rgba(0,0,0,0.36);
-	-webkit-font-smoothing:antialiased;
-}
-
-.btn-xlarge {
-	padding:20px 40px;
-	font-size:25px;
-	-webkit-border-radius:5px;
-	-moz-border-radius:5px;
-	border-radius:5px;
-}
-
-/*	Team Social Icon Styles */
-
-
-.social{
-	text-align: center;
-}
-.social img {
-	-webkit-transition:all .5s ease;
-	-moz-transition:all .5s ease;
-	-o-transition:all .5s ease;
-	-ms-transition:all .5s ease;
-	transition:all .5s ease;
-	margin-right: 4px;
-}
-
-.social img:hover {
-	-webkit-transform:rotate(-15deg);
-	-moz-transform:rotate(-15deg);
-	-o-transform:rotate(-15deg);
-	-ms-transform:rotate(-15deg);
-	transform:rotate(-15deg);
-}
-
-/*	BigVideo Styles */
-
-
-#big-video-wrap {
-	overflow:hidden;
-	position:fixed;
-	height:100%;
-	width:100%;
-	top:0;
-	left:0;
-}
-
-#big-video-vid,#big-video-image {
-	position:absolute;
-}
-
-#big-video-control-container {
-	position:fixed;
-	bottom:20px;
-	padding:0 20px;
-	width:100%;
-	-webkit-transition-duration:.6s;
-	-moz-transition-duration:.6s;
-	-ms-transition-duration:.6s;
-	-o-transition-duration:.6s;
-	transition-duration:.6s;
-}
-
-#big-video-control {
-	width:100%;
-	height:16px;
-	position:relative;
-	display:none;
-}
-
-.btn-primary
-{
-	color:white;
-}
-
