--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -66,7 +66,12 @@ h1 {
     text-align: center;
 }
 
-#header a{
+#header a
+{
+    color: #000000;
+}
+
+#header a.span4 {
     background:url('../../logo.png') no-repeat center center;
     height:80px;
 }
@@ -109,4 +114,186 @@ h1 {
 .footer a {
     color: #009AD0;
     text-decoration: none;
+}
+
+.container .anythingSlider-default .arrow a
+{
+    background: url(../img/right-arrow.png) no-repeat;
+}
+
+.container .anythingSlider-default .arrow.back a
+{
+    background: url(../img/left-arrow.png) no-repeat;
+}
+
+.container .anythingSlider-default {
+    margin: 0 auto;
+    padding: 0 145px 28px 145px;
+}
+
+.container #slider li{
+    font-size: 80px;
+    vertical-align:  middle;
+    line-height: 80px;
+}
+
+.container
+{
+    font-family: 'Raleway', sans-serif;
+}
+
+.container li div.frame.pull-right
+{
+    color: #ffffff;
+    margin-top: 50px;
+    padding: 15px;
+    font-size: 22px;
+    width: 200px;
+    line-height: 26px;
+    font-style: italic;
+}
+
+.container li div.frame.pull-left
+{
+    color: #ffffff;
+    margin-top: 90px;
+    padding: 15px;
+    font-size: 22px;
+    width: 200px;
+    line-height: 26px;
+    font-style: italic;
+}
+.container li div.description
+{
+    line-height: 22px;
+    font-size: 20px;
+    font-weight: normal;
+    padding: 20px;
+    padding-left: 60px;
+    padding-right: 60px;
+}
+
+.container .anythingControls
+{
+    margin-top: -600px;
+}
+
+.container .equala
+{
+    background: #F15929;
+}
+
+.container .anythingSlider-default.activeSlider .anythingControls a.panel1.cur
+{
+    background: #F15929;
+    color: #F15929;
+}
+
+.container .bizzabo
+{
+    background: #93C640;
+}
+
+.container .bizzabo2
+{
+    background: #1074BC;
+}
+
+.container .anythingSlider-default.activeSlider .anythingControls a.panel2.cur
+{
+    background: #93C640;
+    color: #93C640;
+}
+
+.container .appmyday
+{
+    background: #F3A31D;
+}
+
+.container .appmyday2
+{
+    background: #A32064;
+}
+
+.container .appmyday3
+{
+    background: #42C6EC;
+    color: #ffffff;
+}
+
+.container .anythingSlider-default.activeSlider .anythingControls a.panel3.cur
+{
+    background: #F3A31D;
+    color: #F3A31D;
+}
+
+.container .anythingSlider-default.activeSlider .anythingControls a
+{
+    color: #E3E4E6;
+}
+
+.container .anythingSlider-default.activeSlider .anythingControls a.cur
+{
+    border: 3px solid #E3E4E6;
+}
+
+
+.container .anythingSlider-default.activeSlider .anythingControls a
+{
+    background: #E3E4E6;
+    width: 50px;
+    height: 50px;
+    border-radius: 100px;
+    padding: 0;
+}
+
+.container .anythingSlider-default.activeSlider .anythingWindow
+{
+    border-color: transparent;
+}
+
+#slider.anythingBase.horizontal
+{
+    height: 800px;
+}
+
+.founders_title
+{
+    color: #000000;
+    font-size: 20px;
+    line-height: 22px;
+
+}
+.founders
+{
+    color: #ffffff;
+    padding: 20px;
+    font-size: 24px;
+    line-height: 26px;
+    margin-right: 60px;
+    width: 250px;
+}
+
+.url
+{
+    padding: 10px;
+    font-size: 20px;
+    line-height: 22px;
+    font-style: italic;
+}
+
+.greybg
+{
+    color: #ffffff;;
+    background: #57585A;
+}
+
+.overview
+{
+    margin-top: 100px;
+    font-size: 30px;
+    line-height: 32px;
+    margin-right: 60px;
+    padding: 10px;
+    font-style: italic;
 }
