--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -4,7 +4,6 @@
 body {
 	/* Change the background image here  */
     font-family: 'Doppio One', sans-serif;
-    min-width: 1024px;
 }
 
 a, a:visited{color:blue;
@@ -81,7 +80,7 @@ h1 {
 {
     width: 100%;
     height: 160px;
-    padding: 20px;;
+    /*padding: 20px;;*/
     background: #464646;
     color: #ffffff;
 }
@@ -109,11 +108,21 @@ h1 {
     font-weight: normal;
     font-size: 17px;
     color: #009AD0;
+    line-height: 23px;
 }
 
 .footer a {
     color: #009AD0;
     text-decoration: none;
+
+}
+
+.footer .span4,.footer .span5
+{
+    border-right: 2px solid #ffffff;
+    height: 130px;
+    padding-left: 20px;
+    padding-right: 20px;
 }
 
 .container .anythingSlider-default .arrow a
