--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -46,15 +46,14 @@ h1 {
 
 .main-container {
 	position:relative;
-    background: url('../img/hands.jpg') #000 top center  no-repeat;
-    background-size: 100%;
+    /*background: url('../img/hands.jpg') #000 top center  no-repeat;*/
+    /*background-size: 100%;*/
 
 }
 
 
 .main-container .container {
 	padding:0px;
-	min-height: 1000px;
 }
 
 #header .span2
