--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -80,6 +80,7 @@ h1 {
     width: 100%;
     height: 160px;
     /*padding: 20px;;*/
+    padding-top: 20px;
     background: #464646;
     color: #ffffff;
 }
