--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -509,9 +509,9 @@ h1 {
     margin-top: 70px;
     margin-left: 115px;
     display: block;
-    width: 220px;
+    width: 267px;
     height: 60px;
-    background: url('../img/equala.png');
+    background: url('../img/wisepricer.png');
 }
 
 .roomixer_logo
@@ -531,7 +531,7 @@ h1 {
     display: block;
     width: 220px;
     height: 60px;
-    background: url('../img/equala.png');
+    background: url('../img/swayy.png');
 }
 
 .morpheus_logo
@@ -539,9 +539,9 @@ h1 {
     margin-top: 70px;
     margin-left: 265px;
     display: block;
-    width: 220px;
-    height: 60px;
-    background: url('../img/equala.png');
+    width: 300px;
+    height: 135px;
+    background: url('../img/morpheus.png');
 }
 
 .playgem_logo
@@ -551,7 +551,7 @@ h1 {
     display: block;
     width: 220px;
     height: 60px;
-    background: url('../img/equala.png');
+    background: url('../img/playgem.png');
 }
 
 .doalbums_logo
@@ -559,9 +559,9 @@ h1 {
     margin-top: 70px;
     margin-left: 375px;
     display: block;
-    width: 220px;
+    width: 253px;
     height: 60px;
-    background: url('../img/equala.png');
+    background: url('../img/doalbums.png');
 }
 
 .justad_logo
@@ -579,9 +579,9 @@ h1 {
     margin-top: 70px;
     margin-left: 475px;
     display: block;
-    width: 220px;
+    width: 265px;
     height: 60px;
-    background: url('../img/equala.png');
+    background: url('../img/licensario.png');
 }
 
 .askem_logo
@@ -589,19 +589,19 @@ h1 {
     margin-top: 70px;
     margin-left: 525px;
     display: block;
-    width: 220px;
-    height: 60px;
-    background: url('../img/equala.png');
+    width: 197px;
+    height: 65px;
+    background: url('../img/askem.png');
 }
 
 .ringya_logo
 {
-    margin-top: 70px;
-    margin-left: 590px;
+    margin-top: 75px;
+    margin-left: 635px;
     display: block;
-    width: 220px;
-    height: 60px;
-    background: url('../img/equala.png');
+    width: 144px;
+    height: 65px;
+    background: url('../img/ringya.png');
 }
 
 .seven_elements_logo
@@ -609,9 +609,9 @@ h1 {
     margin-top: 70px;
     margin-left: 645px;
     display: block;
-    width: 220px;
-    height: 60px;
-    background: url('../img/equala.png');
+    width: 205px;
+    height: 65px;
+    background: url('../img/7elements.png');
 }
 
 .row .span6 .span2
